--- a/index.html
+++ b/index.html
@@ -219,12 +219,11 @@
 <!-- Container (About Section) -->
 <div id="about" class="container-fluid">
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-6 col-sm-offset-2">
       <h2>About VAW Dataset</h2><br>
-      <h4>Coming Soon...</h4><br>
-      <br><button class="btn btn-default btn-lg">Get in Touch</button>
+      <h4>Details, Paper Links etc. coming soon! Please check back later</h4><br>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-2">
       <span class="glyphicon glyphicon-time logo"></span>
     </div>
   </div>
@@ -234,7 +233,7 @@
 <div id="contact" class="container-fluid bg-grey">
   <h2 class="text-center">CONTACT</h2>
   <div class="row">
-    <h3> Contact any of the authors of the paper for more information. Email is found in the PDF.</h3>
+    <h3> Please email any of the authors of the paper with your comments or questions. Email addresses are found in the PDF.</h3>
     </div>
   </div>
 </div>
