--- a/index.html
+++ b/index.html
@@ -231,11 +231,12 @@
 
 <!-- Container (Contact Section) -->
 <div id="contact" class="container-fluid bg-grey">
-  <h2 class="text-center">CONTACT</h2>
-  <div class="row">
-    <h3> Please email any of the authors of the paper with your comments or questions. Email addresses are found in the PDF.</h3>
+    <div class="row">
+      <div class="col-sm-6 col-sm-offset-2">
+        <h2 class="text-center">CONTACT</h2>
+        <h3> Please email any of the authors of the paper with your comments or questions. Email addresses are found in the PDF.</h3>
+      </div>
     </div>
-  </div>
 </div>
 
 
